feat: add reservation api
