# app/Http/Controllers/Event/ReservationController.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Http\Controllers\Event;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\Event\ReservationRequest;
+use App\Models\Organization\Organization;
+use App\Services\Event\ReservationService;
+use Filament\Facades\Filament;
+use Illuminate\Support\Facades\DB;
+use Throwable;
+
+class ReservationController extends Controller
+{
+    /**
+     * Store a newly created resource in storage.
+     */
+    public function store(ReservationRequest $request)
+    {
+        try {
+            DB::beginTransaction();
+            $data = $request->validated();
+            $organization = Organization::first();
+            Filament::setTenant($organization, true);
+
+            ReservationService::createReservation($data);
+
+            DB::commit();
+            return $this->respondSuccess('Reservation submitted.');
+        } catch (Throwable $th) {
+            DB::rollBack();
+            return $this->respondWithError($th->getMessage(), $th->getCode());
+        }
+    }
+}
